--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><!--links-->
+<head>
+  <!--links-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -45,40 +46,56 @@
 
       </ul>
     </div>
-    
+
   </nav>
   <!--Portfolio Container-->
   <div class="container">
-        <div class="row">Portfolio</h1>
-          <div class="col-sm">
-            one of two
-          </div>
-          <div class="col-sm">
-            one of two
-          </div>
-          <div class="col-sm">
-            one of two
-          </div>
-          <div class="col-sm">
-            one of two
+    <div class="row justify-content-md-center">Portfolio</div>
+  </div>
+  <div class="container">
+    <div class="row justify-content-md-center"> 
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
-        <div></div>
+      </div>
+      <div class="col"><div class="card" style="width: 18rem;">
+        <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div></div>
+      <div class="col"><div class="card" style="width: 18rem;">
+        <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div></div>
+      <div class="col"><div class="card" style="width: 18rem;">
+        <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div></div>
+    </div>
   </div>
   <!--"Bootstrap-Scripts-->
- <div>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+  <div>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
- </div>  
- <!--Footer Below-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"></script>
+  </div>
+  <!--Footer Below-->
   <div class="sticky-footer">
     <h2>Made with Bootstrap</h2>
     <p>
@@ -86,4 +103,5 @@
     </p>
   </div>
 </body>
+
 </html>
