--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
     <!--"Nav" closes the navbar script-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
         <a class="navbar-brand font-weight-bolder" href="#">
-            <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
+            <img src="#" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
             Mr.C
         </a>
@@ -53,7 +53,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="C:\Users\mrcas\Pictures\Profile Pics\Profile.jpg" class="card-img" alt="#">
+                            <img src="#" class="card-img" alt="#">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
