--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="C:\Users\mrcas\Pictures\Profile Pics\Selfie.jpg" class="card-img" alt="...">
+        <img src="#" class="card-img" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
