--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark ">
     <a class="navbar-brand" href="#">
       <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
-        class="d-inline-block align-top" alt="" loading="lazy">
+        class="#" alt="" loading="lazy">
       Mr.C
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
