--- a/portfolio.html
+++ b/portfolio.html
@@ -56,26 +56,26 @@
     <div class="row justify-content-md-center"> 
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+          <img src="#" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
       </div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+        <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Me&Sophia.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+        <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Me&Sophia.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="C:\Users\mrcas\Pictures\Profile Pics\Me&Sophia.jpg" class="card-img-top" alt="...">
+        <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Me&Sophia.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
